More silly little bug fixes